--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: wallpaper_app
-description: A Flutter wallpaper application that fetches images from Pexels API.
+description: AM Wallpapers - A Flutter wallpaper application that fetches images from Pexels API.
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -18,6 +18,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - assets/walpaper_icon.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/walpaper_icon.png"
+  adaptive_icon_background: "#000000"
+  adaptive_icon_foreground: "assets/walpaper_icon.png"
